--- a/Calculadora/Calculadora/wwwroot/css/site.css
+++ b/Calculadora/Calculadora/wwwroot/css/site.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+
+:root {
+    --calculator-bg: #191b28;
+    --calculator-display-box: #000000;
+    --calculator-button-bg:#64278f;
+    --white: #faf0e6;
+}
 html {
   font-size: 14px;
 }
@@ -16,3 +24,49 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+td{
+    padding: 5px;
+}
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+.calculator {
+    padding: 1rem;
+    height: 380px;
+    width: 350px;
+    margin: auto;
+    background-color: var(--calculator-bg);
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.display-box {
+    font-family: 'Orbitron', sans-serif;
+    background-color: #dcdbe1;
+    border: solid black 0.5px;
+    color: var(--calculator-display-box);
+ 
+    width: 100%;
+    height: 80%;
+}
+
+.button {
+    font-family: 'Orbitron', sans-serif;
+    background-color: var(--calculator-button-bg);
+    color: white;
+    border: solid black 0.5px;
+    width: 100%; 
+    height: 100%;
+    outline: none;
+}
+
+    .button:active {
+        background: #e5e5e5;
+        -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+        -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+        box-shadow: inset 0px 0px 5px #c1c1c1;
+    }
+ 
