--- a/Calculadora/Calculadora/Views/Home/Index.cshtml
+++ b/Calculadora/Calculadora/Views/Home/Index.cshtml
@@ -27,14 +27,14 @@
  <td> <input class = "button" type = "button" value = "4" onclick = "display('4')" /> </td>
  <td> <input class = "button" type = "button" value = "5" onclick = "display('5')" /> </td>
  <td> <input class = "button" type = "button" value = "6" onclick = "display('6')" /> </td>
- <td> <input class = "button" type = "button" value = "-" onclick = "display('x')" /> </td>
+ <td> <input class = "button" type = "button" value = "x" onclick = "display('x')" /> </td>
  <td> <input class = "button" type = "button" value = "C" onclick = "clearScreen()" style = "background-color: #fb0066;" /> </td> 
  </tr>
  <tr>
  <td> <input class = "button" type = "button" value = "1" onclick = "display('1')" /> </td>
  <td> <input class = "button" type = "button" value = "2" onclick = "display('2')" /> </td>
  <td> <input class = "button" type = "button" value = "3" onclick = "display('3')" /> </td>
- <td> <input class = "button" type = "button" value = "+" onclick = "display('-')" /> </td>
+ <td> <input class = "button" type = "button" value = "-" onclick = "display('-')" /> </td>
  <td rowspan = "2"> <input class = "button" type = "button" value = "=" onclick = "calculate()" style = "background-color: #fb0066;" /> </td>
  </tr>
  <tr>
