--- a/Calculadora/Calculadora/Views/Home/Index.cshtml
+++ b/Calculadora/Calculadora/Views/Home/Index.cshtml
@@ -8,7 +8,8 @@
 
 
 <form method="post">
-
+    <input type="hidden" readonly value="@ViewBag.VisorDados" name="visorDados" />
+    <input type="hidden" readonly value="@ViewBag.Operacao" name="operacao" />
     <table border="0"
            style="border-spacing:3px;
                  background-color:#ffffff;
