--- a/Calculadora/Calculadora/Views/Shared/_Layout.cshtml
+++ b/Calculadora/Calculadora/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link"><i onclick="darkMode(this)" class="fa-solid fa-moon"></i></a>
+                        <a   id="dark-mode" class=" nav-link"><i  class="fa-solid fa-moon "></i></a>
                         </li>
                     </ul>
                 </div>
