Aula- Calculadora Adição/modificaçao de código das funcionalidades dos operadores

--- a/Calculadora/Calculadora/Views/Home/Index.cshtml
+++ b/Calculadora/Calculadora/Views/Home/Index.cshtml
@@ -8,8 +8,10 @@
 
 
 <form method="post">
-    <input type="hidden" readonly value="@ViewBag.VisorDados" name="visorDados" />
+    
+    <input type="hidden" readonly value="@ViewBag.Operando" name="operando" />
     <input type="hidden" readonly value="@ViewBag.Operacao" name="operacao" />
+    <input type="hidden" readonly value="@ViewBag.LimpaVisor" name="limpaVisor" />
     <table border="0"
            style="border-spacing:3px;
                  background-color:#ffffff;
